docs(phase1): Phase 0→1 게이트 통과 — ADR 확정 4건 + concept 4종 + 축 분리
Phase 0→1 게이트에서 사용자 결정을 받아 Phase 1 에 진입하고 그 산출물을
작성했다. 작성 중 별도 검토 패스와 진입점 전수 재조사에서 드러난 결함을
같은 커밋에 반영한다.

## 확정된 ADR

- ADR-001 구현 언어 = Go. §4a 에 §6a 확장(SQLancer Java / Jepsen Clojure)과의
  상호작용을 평가 기록 — 확장 코퍼스가 5개 언어로 분산되어 어떤 host 언어도
  과반을 네이티브화하지 못하며, 통합 형태는 모두 subprocess + 아티팩트
  ingest 로 수렴한다.
- ADR-002 빌드 = go build + go.mod + Justfile 메타 + ctltool/Makefile 유지
- ADR-003 (신규) 동결 범위 = 축 T 표면만. jar 이름·Java API 비동결.
  F1/F2/F3/NF 4등급 + "미결" 상태 도입
- ADR-004 1차 대체 = Option C' (shell 단독). Phase 2 종료 트리거였으나
  언어 검증 슬라이스와 동일 대상이라 조기 결정

## 프로젝트 방향성 — 축 분리

테스트 실행(T)과 QA 시스템 운영(O)은 다른 축이며 현재 CTP 는 둘이 뭉쳐
있다. 축 O 는 이번 마이그레이션에서 제외하고 제외 사실을 기록하며 나중에
새 층으로 세운다. north-star §1a 를 M1~M5 보다 상위 원칙으로 둔다.

- concept/migration-exclusions.md 신설 — 제외 목록/사유/NG2 예외 기록
- NG6 을 "QA 운영 축 제외"로 확정 승격
- RunShellMain 옵션 13개가 T 8 / O 5 로 갈리는 것이 대표 사례.
  --report-cron 제외로 cubridqa-scheduler.jar 의존이 끊겨 Phase 3 범위 축소

## 진입점 전수 재조사 (cli-tree.md 부록 A)

Phase 0 의 cli-tree.md 가 ctp.sh 한 갈래만 추적했음이 드러났다. 실제로는
java launcher 15개(축 T 6 / 축 O 9)가 존재한다.

- jdbc/bin/run.sh 가 shell.main.JdbcLocalTest 를 호출 → jdbc 가 ADR-004
  Phase 3 범위에 딸려 온다
- shell/init_path/run_shell.sh 는 common/ext/run_shell.sh 와 이름만 같은
  별개 CLI. 공식 가이드 3곳에 문서화된 F1 표면
- sql/bin/interactive.sh, bin/ini.sh 도 미추적이었음

## 검토 반영 (치명 3 / 주요 14)

- isolation .ctl 은 cases/ answers/ 자매 디렉터리가 없다 — cases/ 필수 규칙은
  shell 의 Test.java 한정
- .ctl DSL 은 4토큰이 아니라 8토큰 (sleep / pause for deadlock resolution /
  unblocked / finished 누락)
- runone.sh 의 sed normalization 이 명세에서 통째로 누락 — 모든 isolation
  answer 비교가 이 체인을 통과한다
- answer variant 패턴 오기(.answer_ 접두 누락) + .diff_1 / .answer_WIN 누락
- conf/shell_agent.conf 누락, commonforjdbc.jar 귀속 불명, Windows skip 의
  근거가 isolation 한정, --@<connId> 는 추정인데 F1 로 표기
- 미결 항목을 NF 로 단정한 곳들을 "미결"로 환원 (orphan 폐기, RMI 모드)
- §11 미확정 항목 7 → 17

## ADR 번호 충돌 해소

ROADMAP 초안(005=공존정책 / 006=인벤토리분류)과 PHASE0_EXIT(005=orphan /
006=DB setup)이 이중 배정 상태였다. Phase 4 정밀 분석의 005~009 블록을
유지하고